# shrinkray

./: Cargo.toml  README.md  build.rs  docker-compose.yml
.github/workflows/: base-image.yml  pull-request.yml  tag-image.yml
config/: config.json
docker/: Dockerfile  Dockerfile.base  Dockerfile.dev
kubernetes/: config.yaml  deployment.yaml
src/: backend.rs  config.rs  error.rs  http.rs  image.rs  logging.rs  main.rs  metrics.rs  options.rs  otel.rs  service.rs
