[package]
name = "shrinkray"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"

[dependencies]
async-trait = "0.1.88"
aws-sign-v4 = "0.3.0"
axum = { version = "0.8.1", default-features = false, features = [
    "tokio",
    "http1",
    "query",
    "matched-path",
    "macros",
    "tracing",
] }
axum-extra = "0.10.1"
chrono = "0.4.41"
hex = "0.4.3"
ipnet = { version = "2.11.0", features = ["serde"] }
libvips = "1.7.1"
metrics = { version = "0.24.2", default-features = false }
metrics-exporter-prometheus = { version = "0.17.2", default-features = false }
once_cell = "1.21.3"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.30.0"
rayon = "1.10.0"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
rexif = "0.7.5"
ring = "0.17.14"
rstest = "0.26.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.142"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.14"
tokio = { version = "1.43.1", default-features = false, features = ["full"] }
#tower = { version = "0.5.2", default-features = false }
#tower-http = { version = "0.6.2", default-features = false, features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
url = "2.5.4"

[lints.clippy]
enum_glob_use = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
uninlined_format_args = "allow"
pedantic = { level = "warn", priority = -1 }
